[project]
name = "reproduce"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Schlegel",email = "mkschleg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)"
]
dev = [
    "ipython (>=9.6.0,<10.0.0)"
]
